Added Improved Fixes For Lwjgl3 repo.